[package]
name = "rust-chenxh-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# src\base\request_url_save_md.rs
reqwest = {version="0.11.7",features = ["blocking"]}
html2md = "0.2.14"
rand = "0.8.5"